# 3Aexp

./: .gitignore  pyproject.toml
exp9/: data  main.tex  microstrip.tex  test.tex
exp9/scripts/: beamwidth.py  calc_Zo.py  disp_stab.py  gensui.py  main.py
