[tool.poetry]
name = "experiment"
version = "0.1.0"
description = ""
authors = ["rikuto ide <rikkuy001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
scikit-rf = "^1.4.1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
notebook = "^7.3.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
